CHANGES:

15/09/2013:
- check that FullWrite use the new properties' classes,
- begin to retrieve the sidebar and their content,

07/09/2013:
- check that Acta, BeagleWorks/WordPerfect Works, GreatWorks, HanMac Word-J, HanMac Word-K, Nisus Writer, Z-Write use the new properties' classes,
- HanMac Word-J, HanMac Word-K: retrieve the extra line's style in a table's cell,


07/07/2013:
- add a parser for MacDoc v1.3 document and self-reading document

07/05/2013:
- MWAWZip and MWAWFile: look also in FINDER.DAT and RESOURCE.FRK to retrieve
  resource fork
- MacWrite II/Pro: use patterns to define the final color + retrieve
  table's cells properties
- WriteNow: retrieve table's cells properties
- check that AppleWorks/ClarisWorks, DOCMaker, eDoc, MacWrite, MindWrite,
  More, SimpleText, Tex-Edit, WriteNow use the new properties' classes,

07/02/2013:
- refactor the MWAWCell and MWAWTable classes

-------- version 1.11 (start)  -------------

06/24/2013:
- add a parser for BeagleWorks v1.0 and WordPerfect Works v1.2
- optimize a little the detection of a hqx/zip Document

06/14/2013:
- modify the code to use WPX_SEEK_END when possible

06/12/2013:
- add a parser for GreatWorks v1-v2 to read text and draw document

05/28/2013:
- add a parser for More 2.0 and 3.0, retrieve the organization
  part but not the slide/tree parts ( one days in a Library
  to retrieve slides ? )

-------- version 1.10 (start)  -------------

05/13/2013:
- improve a little the Microsoft Word filter to better manage
  character and paragraph properties

05/07/2013:
- check that the remaining parsers (excepted Microsoft Word) use the
  new properties' classes,
- add table generation in FullWrite parser,
- rewrite from scratch zip.cpp (to avoid using different license),
- + many code corrections done by David Tardon.

05/03/2013:
- check that the WriterPlus parsers use the new properties' classes,
- simplify a little the code of MWAWDocument

04/30/2013: